# fachprojekt-26-btree

./: .gitignore  CMakeLists.txt  README.md  plot.py  run.sh  setup.sh
lib/: .gitignore
script/: generate_ycsb.py
src/: builtin.h  main.cpp
src/benchmark/: btree_olc_benchmark.h  perf_list.csv  workload_set.cpp  workload_set.h
src/tree/: btree_olc.h
workload_specification/: workloada
